--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@polymer/paper-spinner": "^3.0.0-pre.19",
     "@polymer/polymer": "3.0.0",
     "@webcomponents/webcomponentsjs": "^2.0.0",
+    "firebaseui": "^3.1.1",
     "lit-html": "^0.10.0",
     "pwa-helpers": "^0.8.2",
     "redux": "^3.7.2",
